--- a/index.html
+++ b/index.html
@@ -5,56 +5,145 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Financial Calculator</title>
     <style>
+        /* Global Styles */
         body {
-            text-align: center;
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f7fc;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
+
+        h1 {
+            color: #4CAF50;
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+
+        /* Form container styling */
         form {
-            display: inline-block;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+
+        /* Input fields */
+        label {
+            font-size: 14px;
+            color: #333;
+            display: block;
+            margin-bottom: 6px;
+        }
+
+        input, select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box;
+            font-size: 14px;
+        }
+
+        input[type="number"] {
+            font-family: 'Arial', sans-serif;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 12px;
+            border-radius: 5px;
+            width: 100%;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        /* Instructions list */
+        ul {
             text-align: left;
+            margin: 20px 0;
+        }
+
+        ul p {
+            font-size: 14px;
+            color: #555;
+        }
+
+        /* Result text */
+        #result {
+            font-size: 18px;
+            font-weight: bold;
+            color: #333;
+            margin-top: 20px;
+        }
+
+        /* Mobile responsiveness */
+        @media (max-width: 600px) {
+            form {
+                width: 100%;
+                padding: 15px;
+            }
+            button {
+                font-size: 14px;
+                padding: 10px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Financial Calculator</h1>
-    <p><strong>Instructions:</strong></p>
-    <ul style="display: inline-block; text-align: left;">
-        <p>1) Enter the principal amount in dollars.</p>
-        <p>2) Input the annual interest rate as a percentage.</p>
-        <p>3) Specify the time duration in years.</p>
-        <p>4) Choose the number of compounding periods per year.</p>
-        <p>5) If calculating annuities, enter the payment amount.</p>
-        <p>6) Select the calculation type from the dropdown menu.</p>
-        <p>7) Click the "Calculate" button to get results.</p>
-    </ul>
-    
-    <form onsubmit="calculateFinancials(event)">
-        <label for="principal">Principal ($):</label>
-        <input type="number" id="principal" step="0.01" required><br><br>
 
-        <label for="rate">Annual Interest Rate (%):</label>
-        <input type="number" id="rate" step="0.01" required><br><br>
+    <div>
+        <h1>Financial Calculator</h1>
+        <p><strong>Instructions:</strong></p>
+        <ul>
+            <p>1) Enter the principal amount in dollars.</p>
+            <p>2) Input the annual interest rate as a percentage.</p>
+            <p>3) Specify the time duration in years.</p>
+            <p>4) Choose the number of compounding periods per year.</p>
+            <p>5) If calculating annuities, enter the payment amount.</p>
+            <p>6) Select the calculation type from the dropdown menu.</p>
+            <p>7) Click the "Calculate" button to get results.</p>
+        </ul>
 
-        <label for="time">Time (years):</label>
-        <input type="number" id="time" step="0.01" required><br><br>
+        <form onsubmit="calculateFinancials(event)">
+            <label for="principal">Principal ($):</label>
+            <input type="number" id="principal" step="0.01" required><br>
 
-        <label for="compound">Number of Compounding Periods per Year:</label>
-        <input type="number" id="compound" value="1" required><br><br>
+            <label for="rate">Annual Interest Rate (%):</label>
+            <input type="number" id="rate" step="0.01" required><br>
 
-        <label for="payment">Payment Amount (for annuities):</label>
-        <input type="number" id="payment" step="0.01" value="0"><br><br>
+            <label for="time">Time (years):</label>
+            <input type="number" id="time" step="0.01" required><br>
 
-        <select id="calculationType">
-            <option value="simple">Simple Interest</option>
-            <option value="compound">Compound Interest</option>
-            <option value="presentValueAnnuity">Present Value of Annuity</option>
-            <option value="futureValueAnnuity">Future Value of Annuity</option>
-        </select><br><br>
+            <label for="compound">Compounding Periods per Year:</label>
+            <input type="number" id="compound" value="1" required><br>
 
-        <button type="submit">Calculate</button>
-    </form>
+            <label for="payment">Payment Amount (for annuities):</label>
+            <input type="number" id="payment" step="0.01" value="0"><br>
 
-    <h2 id="result"></h2>
+            <select id="calculationType">
+                <option value="simple">Simple Interest</option>
+                <option value="compound">Compound Interest</option>
+                <option value="presentValueAnnuity">Present Value of Annuity</option>
+                <option value="futureValueAnnuity">Future Value of Annuity</option>
+            </select><br>
+
+            <button type="submit">Calculate</button>
+        </form>
+
+        <h2 id="result"></h2>
+    </div>
 
     <script>
         function calculateFinancials(event) {
