--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <footer>
-            <p>© 2025 Smart Financial Calculator | Personal Side Project</p>
+            <p>© Copyright 2025 Joyce Wong</p>
         </footer>
     </div>
 
