--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Financial Calculator</title>
+    <title>Financial Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Smart Financial Calculator</h1>
+            <h1>Financial Calculator</h1>
             <p class="tagline">Plan your financial future with precision</p>
         </header>
 
